docs & ui: finalize architecture/security review, clean dead code, regenerate javadoc, update README with component screenshots